# backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  README.md  app.py  pyproject-base.toml  pyproject.toml  pytest.ini  requirements.txt  seed.py
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: .code-quality.yml.disabled  README.md  docker-deploy.yml  push-dockerhub.yml  unit-tests.yml
alembic/: alembic.ini  env.py
alembic/versions/: 00409f80ca1d_更新practicesession模型加入session_feedbacks關係.py  08ea56170db1_add_therapist_profile_and_client_tables.py  204b799035bd_新增_ai_分析任務追蹤表和結果表.py  50cb4f7496f0_修改ai分析任務為以practice_record為基礎.py  667cb2f3aef3_add_therapist_application_and_document_.py  775631cb8e1e_add_verification_application_id_to_.py  902af8176175_init.py  9a7b581ee2c3_調整練習表.py  add_user_roles_20250609.py  b89c89a3dba7_加入新表_練習會話自己的回饋表.py  c5e5765160e7_新增語句範例音訊欄位.py  c74b06f80000_add_pairing_tokens_table.py  e9e9fafefbf9_簡化ai分析表架構.py  fca1308887e6_05282300.py
celery_app/: README.md  __init__.py  app.py  tasks.py  worker.py
celery_app/services/: __init__.py  analysis.py  audio_task_service.py  db_operations.py  file_utils.py  model_manager.py  task_utils.py  tts_service.py
celery_app/tasks/: __init__.py  analyze_audio.py  analyze_test_audio.py  cleanup_expired.py  health_check.py  test_task.py  text_to_speech.py  (+1 more)
deploy/: .env.example  .gitignore  docker-compose-dev.yml  docker-compose.yml
docker/: DOCKER_README.md  docker-compose-dev.yml  docker-compose.yml
docs/: ERD.drawio  README.md  TherapistApplicationProcess.md  service_test_templates.md
src/: database.py  main.py
tests/: .env.test  README.md  conftest.py
(+135 files in other folders)
